<?xml version="1.0"?>
<package>
  <name>rover</name>
  <version>0.0.0</version>
  <description>The Rover package</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/Uvic-Robotics-Club</url>
  <author email="joelnew@uvic.ca">Joel Newman</author>

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  
  <export>
  </export>
</package>
